==> Paciente8159/uCNC/uCNC/src/hal/mcus/avr/mcu_avr.c <==
#include "../../../cnc.h"
#define F_CPU 16000000UL
#define BAUDRATE 115200

void mcu_init(void)
{
	// disable WDT
	wdt_reset();
	MCUSR &= ~(1 << WDRF);
	WDTCSR |= (1 << WDCE) | (1 << WDE);
	WDTCSR = 0x00;

	// configure all pins
	// autogenerated
	mcu_io_init();

	// Set COM port
	//  Set baud rate
	uint16_t UBRR_value;
#if BAUDRATE < 57600
	UBRR_value = (F_CPU / (16UL * BAUDRATE)) - 1;
	UCSRA &= ~(1 << U2X); // baud doubler off  - Only needed on Uno XXX
#else
	UBRR_value = (F_CPU / (8UL * BAUDRATE)) - 1;
	UCSRA |= (1 << U2X); // baud doubler on for high baud rates, i.e. 115200
#endif
	UBRRH = UBRR_value >> 8;
	UBRRL = UBRR_value;

	// enable rx, tx, and interrupt on complete reception of a byte and UDR empty
	UCSRB |= (1 << RXEN | 1 << TXEN | 1 << RXCIE);

// enable interrupts on pin changes
#ifndef FORCE_SOFT_POLLING
#if ((PCINT0_LIMITS_MASK | PCINT0_CONTROLS_MASK | PROBE_ISR0 | PCINT0_DIN_IO_MASK) != 0)
	SETBIT(PCICR, PCIE0);
#else
	CLEARBIT(PCICR, PCIE0);
#endif
#if ((PCINT1_LIMITS_MASK | PCINT1_CONTROLS_MASK | PROBE_ISR1 | PCINT1_DIN_IO_MASK) != 0)
#ifdef AVR6
	PCMSK1 <<= 1;
#endif
	SETBIT(PCICR, PCIE1);
#else
	CLEARBIT(PCICR, PCIE1);
#endif
#if ((PCINT2_LIMITS_MASK | PCINT2_CONTROLS_MASK | PROBE_ISR2 | PCINT2_DIN_IO_MASK) != 0)
	SETBIT(PCICR, PCIE2);
#else
	CLEARBIT(PCICR, PCIE2);
#endif
#if (EIMSK_VAL != 0)
	EIMSK = EIMSK_VAL;
#endif
#endif

	mcu_start_rtc();

#if SERVOS_MASK > 0
	uint8_t i = (RTC_OCRA >> 1);
	memset(mcu_servos, i, 6);
#endif

#ifdef MCU_HAS_SPI
	// enable SPI, set as master, and clock to fosc/128
	SPSR |= SPSR_VAL;
	SPCR = (1 << SPE) | (1 << MSTR) | (SPI_MODE << 2) | SPCR_VAL;
#endif

#ifdef MCU_HAS_I2C
	// set freq
	TWSR = I2C_PRESC;
	TWBR = (uint8_t)I2C_DIV & 0xFF;
	// enable TWI
	TWCR = (1 << TWEN);
#endif

	// disable probe isr
	mcu_disable_probe_isr();
	// enable interrupts
	mcu_enable_global_isr();
}

void mcu_putc(char c)
{
#ifdef ENABLE_SYNC_TX
	loop_until_bit_is_set(UCSRA, UDRE);
#endif
	COM_OUTREG = c;
#ifndef ENABLE_SYNC_TX
	SETBIT(UCSRB, UDRIE);
#endif
}

void mcu_start_itp_isr(uint16_t clocks_speed, uint16_t prescaller)
{
	// stops timer
	ITP_TCCRB = 0;
	// CTC mode
	ITP_TCCRA = 0;
	// resets counter
	ITP_TCNT = 0;
	// set step clock
	ITP_OCRA = clocks_speed;
	// sets OCR0B to half
	// this will allways fire step_reset between pulses
	ITP_OCRB = ITP_OCRA >> 1;
	// clears interrupt flags by writing 1's
	ITP_TIFR = 7;
	// enable timer interrupts on both match registers
	ITP_TIMSK |= (1 << ITP_OCIEB) | (1 << ITP_OCIEA);

	// start timer in CTC mode with the correct prescaler
	ITP_TCCRB = (uint8_t)prescaller;
}

void mcu_change_itp_isr(uint16_t clocks_speed, uint16_t prescaller)
{
	// stops timer
	// ITP_TCCRB = 0;
	ITP_OCRB = clocks_speed >> 1;
	ITP_OCRA = clocks_speed;
	// sets OCR0B to half
	// this will allways fire step_reset between pulses

	// reset timer
	// ITP_TCNT = 0;
	// start timer in CTC mode with the correct prescaler
	ITP_TCCRB = (uint8_t)prescaller;
}

void mcu_stop_itp_isr(void)
{
	ITP_TCCRB = 0;
	ITP_TIMSK &= ~((1 << ITP_OCIEB) | (1 << ITP_OCIEA));
}

uint32_t mcu_micros()
{
	uint32_t rtc_elapsed = RTC_TCNT;
	uint32_t ms = mcu_runtime_ms;

	rtc_elapsed = ((rtc_elapsed * 1000) / RTC_OCRA) + (ms * 1000);
	return rtc_elapsed;
}

void mcu_eeprom_putc(uint16_t address, uint8_t value)
{
	uint8_t old_value; // Old EEPROM value.
	uint8_t diff_mask; // Difference mask, i.e. old value XOR new value.

	cli(); // Ensure atomic operation for the write operation.

	do
	{
	} while (EECR & (1 << EEPE)); // Wait for completion of previous write.

	do
	{
	} while (SPMCSR & (1 << SELFPRGEN)); // Wait for completion of SPM.

	EEAR = address;				   // Set EEPROM address register.
	EECR = (1 << EERE);			   // Start EEPROM read operation.
	old_value = EEDR;			   // Get old EEPROM value.
	diff_mask = old_value ^ value; // Get bit differences.
	// Check if any bits are changed to '1' in the new value.
	if (diff_mask & value)
	{
		// Now we know that _some_ bits need to be erased to '1'.
		// Check if any bits in the new value are '0'.
		if (value != 0xff)
		{
			// Now we know that some bits need to be programmed to '0' also.
			EEDR = value;										 // Set EEPROM data register.
			EECR = ((1 << EEMPE) | (0 << EEPM1) | (0 << EEPM0)); // Erase+Write mode.
			EECR |= (1 << EEPE);								 // Start Erase+Write operation.
		}
		else
		{
			// Now we know that all bits should be erased.
			EECR = ((1 << EEMPE) | (1 << EEPM0)); // Erase-only mode.
			EECR |= (1 << EEPE);				  // Start Erase-only operation.
		}
	}
	else
	{
		// Now we know that _no_ bits need to be erased to '1'.
		// Check if any bits are changed from '1' in the old value.
		if (diff_mask)
		{
			// Now we know that _some_ bits need to the programmed to '0'.
			EEDR = value;						  // Set EEPROM data register.
			EECR = ((1 << EEMPE) | (1 << EEPM1)); // Write-only mode.
			EECR |= (1 << EEPE);				  // Start Write-only operation.
		}
	}

	do
	{
	} while (EECR & (1 << EEPE)); // Wait for completion of previous write before enabling interrupts.

	sei(); // Restore interrupt flag state.
}

void mcu_spi_config(uint8_t mode, uint32_t frequency)
{
	mode = CLAMP(0, mode, 4);
	// disable SPI
	uint8_t div = (uint8_t)(F_CPU / frequency);
	uint8_t spsr, spcr;
	if (div < 2)
	{
		spcr = 0;
		spsr = 1;
	}
	else if (div < 4)
	{
		spcr = 0;
		spsr = 0;
	}
	else if (div < 8)
	{
		spcr = 1;
		spsr = 1;
	}
	else if (div < 16)
	{
		spcr = 1;
		spsr = 0;
	}
	else if (div < 32)
	{
		spcr = 2;
		spsr = 1;
	}
	else if (div < 64)
	{
		spcr = 2;
		spsr = 0;
	}
	else
	{
		spcr = 3;
		spsr = 0;
	}

	// clear speed and mode
	SPCR = 0;
	SPSR |= spsr;
	SPCR = (1 << SPE) | (1 << MSTR) | (mode << 2) | spcr;
}

uint8_t mcu_i2c_write(uint8_t data, bool send_start, bool send_stop)
{
	if (send_start)
	{
		// init
		TWCR = (1 << TWINT) | (1 << TWSTA) | (1 << TWEN);
		while (!(TWCR & (1 << TWINT)))
			;
		if ((TWSR & 0xF8) != 0x08)
		{
			return 0;
		}
	}

	TWDR = data;
	TWCR = (1 << TWINT) | (1 << TWEN);
	while (!(TWCR & (1 << TWINT)))
		;

	switch (TWSR & 0xF8)
	{
	case 0x18:
	case 0x28:
	case 0x40:
	case 0x50:
		break;
	default:
		TWCR = (1 << TWINT) | (1 << TWSTO) | (1 << TWEN);
		while (TWCR & (1 << TWSTO))
			;
		return 0;
	}

	if (send_stop)
	{
		TWCR = (1 << TWINT) | (1 << TWSTO) | (1 << TWEN);
		while (TWCR & (1 << TWSTO))
			;
	}

	return 1;
}

uint8_t mcu_i2c_read(bool with_ack, bool send_stop)
{
	uint8_t c = 0;

	TWCR = (1 << TWINT) | (1 << TWEN) | ((!with_ack) ? 0 : (1 << TWEA));
	while (!(TWCR & (1 << TWINT)))
		;
	c = TWDR;

	if (send_stop)
	{
		TWCR = (1 << TWINT) | (1 << TWSTO) | (1 << TWEN);
		while (TWCR & (1 << TWSTO))
			;
	}

	return c;
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	uint32_t clocks = timeout * (F_CPU / 1000000UL);
	uint8_t pres = (1 << 3); // CTC mode

	mcu_timeout_cb = fp;

#if (ONESHOT_TIMER == 2)
	if (clocks <= ((1UL << 8) - 1))
	{
		pres |= 1;
	}
	else if (clocks <= ((1UL << 11) - 1))
	{
		clocks >>= 3;
		pres |= 2;
	}
	else if (clocks <= ((1UL << 13) - 1))
	{
		clocks >>= 5;
		pres |= 3;
	}
	else if (clocks <= ((1UL << 14) - 1))
	{
		clocks >>= 6;
		pres |= 4;
	}
	else if (clocks <= ((1UL << 15) - 1))
	{
		clocks >>= 7;
		pres |= 5;
	}
	else if (clocks <= ((1UL << 16) - 1))
	{
		clocks >>= 8;
		pres |= 6;
	}
	else
	{
		clocks >>= 10;
		pres |= 7;
	}
#else
	if (clocks <= ((1UL << 8) - 1))
	{
		pres |= 1;
	}
	else if (clocks <= ((1UL << 11) - 1))
	{
		clocks >>= 3;
		pres |= 2;
	}
	else if (clocks <= ((1UL << 14) - 1))
	{
		clocks >>= 6;
		pres |= 3;
	}
	else if (clocks <= ((1UL << 16) - 1))
	{
		clocks >>= 8;
		pres |= 4;
	}
	else
	{
		clocks >>= 10;
		pres |= 5;
	}
#endif

	// stops timer
	ONESHOT_TCCRB = 0;
	// CTC mode
	ONESHOT_TCCRA = 0;
	// resets counter
	ONESHOT_TCNT = 0;
	// set step clock
	ONESHOT_OCRA = ((uint8_t)(clocks & 0xFF)) - 1;
	// clears interrupt flags by writing 1's
	ONESHOT_TIFR = 0x7;
	// start timer in CTC mode with the correct prescaler
	ONESHOT_TCCRB = pres;
}
