==> Paciente8159/uCNC/uCNC/src/hal/mcus/stm32f4x/mcu_stm32f4x.c <==
#include "../../../cnc.h"
#include "core_cm4.h"
#include "stm32f4xx.h"
#include "mcumap_stm32f4x.h"
#include <math.h>
#include <tusb_ucnc.h>
#define FLASH_SIZE (FLASH_END - FLASH_BASE + 1)
#define FLASH_LIMIT (FLASH_BASE + FLASH_SIZE - 1)
#define FLASH_EEPROM_SIZE 0x400
#define FLASH_EEPROM_SIZE_WORD (FLASH_EEPROM_SIZE >> 2)
#define FLASH_EEPROM_SIZE_WORD_ALIGNED (FLASH_EEPROM_SIZE_WORD << 2)
#define FLASH_SECTOR_SIZE 0x20000UL
#define FLASH_SECTORS (FLASH_SIZE / FLASH_SECTOR_SIZE) + 4
#define FLASH_EEPROM_START (FLASH_LIMIT - FLASH_SECTOR_SIZE + 1)
#define FLASH_EEPROM_PER_SECTION (FLASH_SECTOR_SIZE / FLASH_EEPROM_SIZE_WORD_ALIGNED)
#define FLASH_EEPROM_END (FLASH_EEPROM_START + (FLASH_EEPROM_PER_SECTION * FLASH_EEPROM_SIZE_WORD_ALIGNED) - 1)
#define READ_FLASH(ram_ptr, flash_ptr) (*ram_ptr = ~(*flash_ptr))
#define WRITE_FLASH(flash_ptr, ram_ptr) (*flash_ptr = ~(*ram_ptr))
#define EEPROM_CLEAN 0
#define EEPROM_DIRTY 1
#define EEPROM_NEEDS_NEWPAGE 2

void mcu_putc(char c)
{
#ifdef ENABLE_SYNC_TX
	while (!mcu_tx_ready())
	{
#ifdef MCU_HAS_USB
		tusb_cdc_flush();
#endif
	}
#endif

#ifdef MCU_HAS_UART
	COM_OUTREG = c;
#ifndef ENABLE_SYNC_TX
	COM_UART->CR1 |= (USART_CR1_TXEIE);
#endif
#endif

#if (defined(MCU_HAS_UART2) && !defined(UART2_DETACH_MAIN_PROTOCOL))
	COM2_OUTREG = c;
#ifndef ENABLE_SYNC_TX
	COM2_UART->CR1 |= (USART_CR1_TXEIE);
#endif
#endif

#ifdef MCU_HAS_USB
	if (c != 0)
	{
		tusb_cdc_write(c);
	}
	if (c == '\r' || c == 0)
	{
		tusb_cdc_flush();
	}
#endif
}

void mcu_init(void)
{
	// make sure both APB1 and APB2 are running at the same clock (48MHz)
	mcu_clocks_init();
	mcu_io_init();
	mcu_usart_init();
	mcu_rtc_init();
#if SERVOS_MASK > 0
	servo_timer_init();
#endif
#ifdef MCU_HAS_SPI
	SPI_ENREG |= SPI_ENVAL;
	mcu_config_af(SPI_SDI, SPI_AFIO);
	mcu_config_af(SPI_CLK, SPI_AFIO);
	mcu_config_af(SPI_SDO, SPI_AFIO);
	// initialize the SPI configuration register
	SPI_REG->CR1 = SPI_CR1_SSM	   // software slave management enabled
				   | SPI_CR1_SSI   // internal slave select
				   | SPI_CR1_MSTR; // SPI master mode
								   //    | (SPI_SPEED << 3) | SPI_MODE;
	mcu_spi_config(SPI_MODE, SPI_FREQ);

	SPI_REG->CR1 |= SPI_CR1_SPE;
#endif
#ifdef MCU_HAS_I2C
	RCC->APB1ENR |= I2C_APBEN;
	mcu_config_af(I2C_CLK, I2C_AFIO);
	mcu_config_af(I2C_DATA, I2C_AFIO);
	mcu_config_pullup(I2C_CLK);
	mcu_config_pullup(I2C_DATA);
	// set opendrain
	mcu_config_opendrain(I2C_CLK);
	mcu_config_opendrain(I2C_DATA);
	// reset I2C
	I2C_REG->CR1 |= I2C_CR1_SWRST;
	I2C_REG->CR1 &= ~I2C_CR1_SWRST;
	// set max freq
	I2C_REG->CR2 |= I2C_SPEEDRANGE;
	I2C_REG->TRISE = (I2C_SPEEDRANGE + 1);
	I2C_REG->CCR |= (I2C_FREQ <= 100000UL) ? ((I2C_SPEEDRANGE * 5) & 0x0FFF) : (((I2C_SPEEDRANGE * 5 / 6) & 0x0FFF) | I2C_CCR_FS);
	// initialize the SPI configuration register
	I2C_REG->CR1 |= I2C_CR1_PE;
#endif

	mcu_disable_probe_isr();
	stm32_flash_current_offset = 0;
	stm32_global_isr_enabled = false;
	mcu_eeprom_init();
	mcu_enable_global_isr();
}

void mcu_start_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	RCC->TIMER_ENREG |= TIMER_APB;
	TIMER_REG->CR1 = 0;
	TIMER_REG->DIER = 0;
	TIMER_REG->PSC = prescaller;
	TIMER_REG->ARR = ticks;
	TIMER_REG->EGR |= 0x01;
	TIMER_REG->SR &= ~0x01;

	NVIC_SetPriority(MCU_ITP_IRQ, 1);
	NVIC_ClearPendingIRQ(MCU_ITP_IRQ);
	NVIC_EnableIRQ(MCU_ITP_IRQ);

	TIMER_REG->DIER |= 1;
	TIMER_REG->CR1 |= 1; // enable timer upcounter no preload
}

void mcu_change_itp_isr(uint16_t ticks, uint16_t prescaller)
{
	TIMER_REG->ARR = ticks;
	TIMER_REG->PSC = prescaller;
	TIMER_REG->EGR |= 0x01;
}

void mcu_stop_itp_isr(void)
{
	TIMER_REG->CR1 &= ~0x1;
	TIMER_REG->DIER &= ~0x1;
	TIMER_REG->SR &= ~0x01;
	NVIC_DisableIRQ(MCU_ITP_IRQ);
}

uint32_t mcu_micros()
{
	return ((mcu_runtime_ms * 1000) + ((SysTick->LOAD - SysTick->VAL) / (F_CPU / 1000000)));
}

void mcu_eeprom_putc(uint16_t address, uint8_t value)
{
	// if the value of the eeprom is modified then it will be marked as dirty
	// flash default value is 0xFF. If programming can change value from 1 to 0 but not the other way around
	// if a bit is changed from 0 back to 1 then it will need to rewrite values in a new page
	// flash read and writing is done in negated form
	if (stm32_eeprom_buffer[address] != value)
	{
		stm32_flash_modified |= EEPROM_DIRTY;
		if ((value ^ stm32_eeprom_buffer[address]) & ~value)
		{
			stm32_flash_modified |= EEPROM_NEEDS_NEWPAGE;
		}
	}

	stm32_eeprom_buffer[address] = value;
}

void mcu_spi_config(uint8_t mode, uint32_t frequency)
{
	mode = CLAMP(0, mode, 4);
	uint8_t div = (uint8_t)(SPI_CLOCK / frequency);

	uint8_t speed;
	if (div < 2)
	{
		speed = 0;
	}
	else if (div < 4)
	{
		speed = 1;
	}
	else if (div < 8)
	{
		speed = 2;
	}
	else if (div < 16)
	{
		speed = 3;
	}
	else if (div < 32)
	{
		speed = 4;
	}
	else if (div < 64)
	{
		speed = 5;
	}
	else if (div < 128)
	{
		speed = 6;
	}
	else
	{
		speed = 7;
	}

	// disable SPI
	SPI_REG->CR1 &= SPI_CR1_SPE;
	// clear speed and mode
	SPI_REG->CR1 &= 0x3B;
	SPI_REG->CR1 |= (speed << 3) | mode;
	// enable SPI
	SPI_REG->CR1 |= SPI_CR1_SPE;
}

uint8_t mcu_i2c_write(uint8_t data, bool send_start, bool send_stop)
{
	uint32_t status = send_start ? I2C_SR1_ADDR : I2C_SR1_BTF;
	I2C_REG->SR1 &= ~I2C_SR1_AF;
	if (send_start)
	{
		// init
		I2C_REG->CR1 |= I2C_CR1_START;
		while (!((I2C_REG->SR1 & I2C_SR1_SB) && (I2C_REG->SR2 & I2C_SR2_MSL) && (I2C_REG->SR2 & I2C_SR2_BUSY)))
			;
		if (I2C_REG->SR1 & I2C_SR1_AF)
		{
			I2C_REG->CR1 |= I2C_CR1_STOP;
			while ((I2C_REG->CR1 & I2C_CR1_STOP))
				;
			return 0;
		}
	}

	I2C_REG->DR = data;
	while (!(I2C_REG->SR1 & status))
		;
	// read SR2 to clear ADDR
	if (send_start)
	{
		status = I2C_REG->SR2;
	}

	if (I2C_REG->SR1 & I2C_SR1_AF)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
		return 0;
	}

	if (send_stop)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
	}

	return 1;
}

uint8_t mcu_i2c_read(bool with_ack, bool send_stop)
{
	uint8_t c = 0;

	if (!with_ack)
	{
		I2C_REG->CR1 &= ~I2C_CR1_ACK;
	}
	else
	{
		I2C_REG->CR1 |= I2C_CR1_ACK;
	}

	while (!(I2C_REG->SR1 & I2C_SR1_RXNE))
		;
	;
	c = I2C_REG->DR;

	if (send_stop)
	{
		I2C_REG->CR1 |= I2C_CR1_STOP;
		while ((I2C_REG->CR1 & I2C_CR1_STOP))
			;
	}

	return c;
}

void mcu_config_timeout(mcu_timeout_delgate fp, uint32_t timeout)
{
	// up and down counter (generates half the step rate at each event)
	uint32_t clocks = (uint32_t)((ONESHOT_TIMER_CLOCK / 1000000UL) * timeout);
	uint32_t presc = 1;

	mcu_timeout_cb = fp;

	while (clocks > 0xFFFF)
	{
		presc <<= 1;
		clocks >>= 1;
	}

	presc--;
	clocks--;

	RCC->ONESHOT_TIMER_ENREG |= ONESHOT_TIMER_APB;
	ONESHOT_TIMER_REG->CR1 = 0;
	ONESHOT_TIMER_REG->DIER = 0;
	ONESHOT_TIMER_REG->PSC = presc;
	ONESHOT_TIMER_REG->ARR = clocks;
	ONESHOT_TIMER_REG->EGR |= 0x01;
	ONESHOT_TIMER_REG->SR = 0;
	ONESHOT_TIMER_REG->CNT = 0;

	NVIC_SetPriority(MCU_ONESHOT_IRQ, 1);
	NVIC_ClearPendingIRQ(MCU_ONESHOT_IRQ);
	NVIC_EnableIRQ(MCU_ONESHOT_IRQ);

	// ONESHOT_TIMER_REG->DIER |= 1;
	// ONESHOT_TIMER_REG->CR1 |= 1; // enable timer upcounter no preload
}
